--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <div class="collapse navbar-collapse" id="navbarIcon">
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
-                    <a href="#" class="nav-link">Home</a>
+                    <a href="index.html" class="nav-link">Home</a>
                   </li>
                   <li class="nav-item">
                     <a href="#" class="nav-link">About Us</a>
@@ -52,7 +52,7 @@
                <a href="login.html">Login</a>
               </p>
               <p>
-              <a href="register.html">Register</a>
+              <a href="singup.html">SingUp</a>
                 
               </p>
            
