--- a/ekyc-banking.html
+++ b/ekyc-banking.html
@@ -91,37 +91,21 @@
           </button>
         </div>
 
-        <div class="products-section">
-          <div class="product-card">
-            <img src="image/promo.png" alt="">
-            <a href="#">Union Porishad</a>
-          </div>
-          <div class="product-card">
-            <img src="image/promo1.png" alt="">
-            <a href="pourashava.html">Pourashava Softwte</a>
-          </div>
-
-          <div class="product-card">
-            <img src="image/promo2.png" alt="">
-            <a href="ekyc-banking.html">Ekyc Program</a>
-          </div>
-
-          <div class="product-card">
-            <img src="image/promo2.png" alt="">
-            <a href="#">Tax Asessment Service</a>
-          </div>
+        <div class="ekyc-banking-section">
+           <div class="ekyc-banking">
+            <img src="image/p.png" alt="">
+            <img src="image/p.png" alt="">
+            <img src="image/p.png" alt="">
+            <img src="image/p.png" alt="">
+            <img src="image/p.png" alt="">
+            <img src="image/p.png" alt="">
+            <img src="image/p.png" alt="">
+            <img src="image/p.png" alt="">
+            <img src="image/p.png" alt="">
+            <img src="image/p.png" alt="">
+           </div>
 
 
-          <div class="product-card">
-            <img src="image/promo2.png" alt="">
-            <a href="#">Tex Collection Service</a>
-          </div>
-
-
-          <div class="product-card">
-            <img src="image/promo2.png" alt="">
-            <a href="#">Digital Holding Plate</a>
-          </div>
           <div class="shadow"><img src="image/shadow1.png" alt=""></div>
         </div>
   
